admin-bus/kube_v2/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: angular-portal
  namespace: oasa-telemat
spec:
  selector:
    app: angular-portal
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
